# DuckDB-CUBIT

./: .gitignore  CMakeLists.txt  Makefile  README.md  bm_15000000_done  getbitmaps.sh
.github/regression/: micro_extended.csv
.github/workflows/: Regression.yml
benchmark/tpch/parquet/: parquet_load_encrypted.benchmark  parquet_q1_encrypted.benchmark
bm_15000000_quantity/: 0.bm
examples/embedded-c++/: CMakeLists.txt  main.cpp
extension/: extension_config_local.cmake
extension/httpfs/: crypto.cpp  httpfs_extension.cpp  s3fs.cpp
extension/httpfs/include/: crypto.hpp  s3fs.hpp
extension/json/json_functions/: json_pretty_print.cpp
extension/parquet/: column_reader.cpp  parquet_crypto.cpp  parquet_extension.cpp  parquet_reader.cpp  parquet_writer.cpp  serialize_parquet.cpp
extension/parquet/include/: parquet.json  parquet_crypto.hpp  parquet_reader.hpp  parquet_writer.hpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt  aes_state.cpp  enum_util.cpp  file_system.cpp  local_file_system.cpp  multi_file_reader.cpp  symbols.cpp  virtual_file_system.cpp
src/common/types/: hugeint.cpp  uhugeint.cpp
src/core_functions/: function_list.cpp
src/function/: scalar_function.cpp
src/include/: duckdb.h
src/main/: client_context.cpp  config.cpp  database.cpp
src/main/capi/: CMakeLists.txt
src/parallel/: pipeline_executor.cpp
src/planner/: bind_context.cpp
src/storage/: single_file_block_manager.cpp
test/api/: test_reset.cpp
test/extension/: loadable_extension_demo.cpp
tools/odbc/: statement_functions.cpp
tools/pythonpkg/: duckdb_python.cpp
(+65 files in other folders)
